# oscamp-base-experiment

./: Cargo.toml  README.md  check.sh  exercises.toml
.cargo/: config.toml  run_riscv64.sh
.devcontainer/: devcontainer.json  setup.sh
.github/result/: check_result.json
.github/workflows/: scoring.yml
cli/: Cargo.toml
cli/src/: main.rs
exercises/01_concurrency_sync/01_thread_spawn/: Cargo.toml
exercises/01_concurrency_sync/01_thread_spawn/src/: lib.rs
exercises/01_concurrency_sync/02_mutex_counter/: Cargo.toml
exercises/01_concurrency_sync/02_mutex_counter/src/: lib.rs
exercises/01_concurrency_sync/03_channel/: Cargo.toml
exercises/01_concurrency_sync/03_channel/src/: lib.rs
exercises/01_concurrency_sync/04_process_pipe/: Cargo.toml
exercises/02_async_programming/02_tokio_tasks/: Cargo.toml
exercises/02_async_programming/03_async_channel/: Cargo.toml
exercises/02_async_programming/04_select_timeout/: Cargo.toml
exercises/02_no_std_dev/01_global_allocator/: Cargo.toml
exercises/02_no_std_dev/01_global_allocator_without_free/: Cargo.toml
exercises/02_no_std_dev/01_mem_primitives/: Cargo.toml
exercises/02_no_std_dev/02_allocator_with_free/: Cargo.toml
exercises/02_no_std_dev/03_raw_syscall/: Cargo.toml
exercises/02_no_std_dev/05_fd_table/: Cargo.toml
exercises/03_no_std_dev/02_bump_allocator/: Cargo.toml
exercises/03_no_std_dev/03_file_descriptor/: Cargo.toml
exercises/03_no_std_dev/03_free_list_allocator/: Cargo.toml
exercises/03_no_std_dev/04_syscall_wrapper/: Cargo.toml
exercises/03_os_concurrency/04_spinlock_guard/: Cargo.toml
exercises/03_os_concurrency/05_rwlock/: Cargo.toml
exercises/04_context_switch/01_stack_coroutine/: Cargo.toml
exercises/04_os_concurrency/01_atomic_counter/: Cargo.toml
exercises/04_os_concurrency/02_atomic_ordering/: Cargo.toml
exercises/04_os_concurrency/03_spinlock/: Cargo.toml
exercises/05_async_programming/01_basic_future/: Cargo.toml
exercises/05_context_switch/02_green_threads/: Cargo.toml
exercises/06_page_table/01_pte_flags/: Cargo.toml
exercises/06_page_table/02_page_table_walk/: Cargo.toml
exercises/06_page_table/03_multi_level_pt/: Cargo.toml
exercises/06_page_table/04_tlb_sim/: Cargo.toml
scripts/: setup_riscv64.sh
(+45 files in other folders)
