[workspace]
resolver = "2"
members = [
    "exercises/01_concurrency_sync/01_thread_spawn",
    "exercises/01_concurrency_sync/02_mutex_counter",
    "exercises/01_concurrency_sync/03_channel",
    "exercises/01_concurrency_sync/04_process_pipe",
    "exercises/02_no_std_dev/01_global_allocator_without_free",
    "exercises/02_no_std_dev/02_allocator_with_free",
    "exercises/02_no_std_dev/03_raw_syscall",
    "exercises/02_no_std_dev/04_file_descriptor",
    "exercises/03_os_concurrency/01_atomic_counter",
    "exercises/03_os_concurrency/02_atomic_ordering",
    "exercises/03_os_concurrency/03_spinlock",
    "exercises/03_os_concurrency/04_spinlock_guard",
    "exercises/03_os_concurrency/05_rwlock",
    "exercises/04_context_switch/01_stack_coroutine",
    "exercises/04_context_switch/02_green_threads",
    "exercises/05_async_programming/01_basic_future",
    "exercises/05_async_programming/02_tokio_tasks",
    "exercises/05_async_programming/03_async_channel",
    "exercises/05_async_programming/04_select_timeout",
    "exercises/06_page_table/01_pte_flags",
    "exercises/06_page_table/02_page_table_walk",
    "exercises/06_page_table/03_multi_level_pt",
    "exercises/06_page_table/04_tlb_sim",
    "cli",
]
